--- a/learn-certs-pr/exams/az-104.yml
+++ b/learn-certs-pr/exams/az-104.yml
@@ -6,9 +6,13 @@ metadata:
 uid: exam.az-104
 displayName: AZ-104
 summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am, 25. Mai 2021 aktualisiert.Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wird am 24. September 2021 aktualisiert. Bitte laden Sie das Dokument "Skills  measured" herunter, um zu sehen, was sich ändern wird.</strong></font><br/><br/></div>
 
   Kandidaten für dieses examens sollten über Fachkenntnisse in der Implementieren, Verwaltung und Überwachung der Microsoft Azure-Umgebung eines Unternehmens verfügen.
+
+  Zu den Aufgaben dieser Rolle gehören die Implementierung, Verwaltung und Überwachung von Identitäten, Governance, Speicherung, Rechenoperationen und virtuelle Netzwerke in einer Cloud-Umgebung sowie die Bereitstellung, Dimensionierung, Überwachung und Anpassung von Ressourcen, falls erforderlich.
+  
+  Ein Azure-Administrator ist häufig Teil eines größeren Teams, das sich mit der Implementierung der Cloud-Infrastruktur eines Unternehmens befasst.
 
   Ein Kandidat für dieses examens sollte mindestens sechs Monate praktische Erfahrung in der Verwaltung von Azure sowie ein umfassendes Verständnis der wichtigsten Azure-Services, Azure-Workloads, Sicherheit und Governance haben. Darüber hinaus sollte man in dieser Rolle Erfahrung mit PowerShell-, Azure CLI-, Azure Portal- und Azure Resource Manager-Vorlagen haben.
 
@@ -27,10 +31,19 @@ locales:
 - zh-cn
 - ko
 - ja
+- fr
+- de
+- es
+- pt-br
+- ru
+- ar-sa
+- id-id
+- zh-tw
+- it
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am 25. Mai 2021 aktualisiert.Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prüfung wird am 24. September 2021 aktualisiert. Bitte laden Sie die Übersicht über die zu prüfenden Fähigkeiten herunter, um zu sehen, was sich ändern wird.
 - Verwalten von Azure-Identitäten und -Governance (15-20%)
 - Speicherplatz implementieren und verwalten (10-15%)
 - Bereitstellen und Verwalten von Azure-Rechenressourcen (20-25%)
