--- a/learn-certs-pr/courses/az-204t00.yml
+++ b/learn-certs-pr/courses/az-204t00.yml
@@ -3,12 +3,12 @@ title: Developing Solutions for Microsoft Azure
 metadata:
   title: 'Course AZ-204T00--A: Developing Solutions for Microsoft Azure'
   description: 'Course AZ-204T00--A: Developing Solutions for Microsoft Azure'
-  ms.openlocfilehash: 4b0ca86bc11137e5d2c3e4ad1ce482448be79c18
-  ms.sourcegitcommit: ac658d0294a354cec251bb1835b62222fea53b6f
-  ms.translationtype: MT
+  ms.openlocfilehash: a9d238025e50ed26ad1239f89fedb8c43a0c5495
+  ms.sourcegitcommit: 4e7b3b6a21aeb60353d966b21e98cffa92a846c2
+  ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/19/2022
-  ms.locfileid: "136954860"
+  ms.lasthandoff: 01/31/2022
+  ms.locfileid: "137892366"
 uid: course.az-204t00
 courseNumber: AZ-204T00
 hoursToComplete: 120
@@ -25,18 +25,37 @@ products:
 exams:
 - uid: exam.az-204
 studyGuide:
-- uid: learn.wwl.create-azure-app-service-web-apps
-- uid: learn.wwl.implement-azure-functions
-- uid: learn.wwl.develop-solutions-that-use-blob-storage
-- uid: learn.wwl.az-204-develop-solutions-that-use-azure-cosmos-db
-- uid: learn.wwl.az-204-implement-iaas-solutions
-- uid: learn.wwl.az-204-implement-authentication-authorization
-- uid: learn.wwl.az-204-implement-secure-cloud-solutions
-- uid: learn.wwl.az-204-implement-api-management
-- uid: learn.wwl.az-204-develop-event-based-solutions
-- uid: learn.wwl.az-204-develop-message-based-solutions
-- uid: learn.wwl.az-204-instrument-solutions-to-support-monitoring-logging
-- uid: learn.wwl.az-204-integrate-caching-content-delivery-within-solutions
+- uid: learn.wwl.introduction-to-azure-app-service
+- uid: learn.wwl.configure-web-app-settings
+- uid: learn.wwl.scale-apps-app-service
+- uid: learn.wwl.understand-app-service-deployment-slots
+- uid: learn.wwl.explore-azure-functions
+- uid: learn.wwl.develop-azure-functions
+- uid: learn.wwl.implement-durable-functions
+- uid: learn.wwl.explore-azure-blob-storage
+- uid: learn.wwl.manage-azure-blob-storage-lifecycle
+- uid: learn.wwl.work-azure-blob-storage
+- uid: learn.wwl.explore-azure-cosmos-db
+- uid: learn.wwl.implement-partitioning-azure-cosmos-db
+- uid: learn.wwl.work-with-cosmos-db
+- uid: learn.wwl.provision-virtual-machines-azure
+- uid: learn.wwl.create-deploy-azure-resource-manager-templates
+- uid: learn.wwl.publish-container-image-to-azure-container-registry
+- uid: learn.wwl.create-run-container-images-azure-container-instances
+- uid: learn.wwl.explore-microsoft-identity-platform
+- uid: learn.wwl.implement-authentication-by-using-microsoft-authentication-library
+- uid: learn.wwl.implement-shared-access-signatures
+- uid: learn.wwl.microsoft-graph
+- uid: learn.wwl.implement-azure-key-vault
+- uid: learn.wwl.implement-managed-identities
+- uid: learn.wwl.implement-azure-app-configuration
+- uid: learn.wwl.explore-api-management
+- uid: learn.wwl.azure-event-grid
+- uid: learn.wwl.azure-event-hubs
+- uid: learn.wwl.discover-azure-message-queue
+- uid: learn.wwl.monitor-app-performance
+- uid: learn.wwl.develop-for-azure-cache-for-redis
+- uid: learn.wwl.develop-for-storage-cdns
 summary: >-
   In diesem Kurs lernen Entwickler, wie End-to-End-Lösungen in Microsoft Azure erstellt werden. Die Teilnehmer lernen, wie man Azure-Computerlösungen implementiert, Azure-Funktionen erstellen, Webanwendungen implementieren und verwalten, Lösungen unter Verwendung von Azure-Storage entwickeln, Authentifizierung und Autorisierung implementieren und ihre Lösungen mit Hilfe von KeyVault und verwalteten Identitäten sichern kann. Die Teilnehmer lernen außerdem, wie man eine Verbindung zu Azure-Diensten und Diensten von Drittanbietern herstellt, diese nutzen und ereignis- und nachrichtenbasierte Modelle in ihre Lösungen einbeziehen kann. Außerdem werden im Kurs Überwachung, Problembehandlung und Optimierung von Azure-Lösungen behandelt.
 
