--- a/learn-certs-pr/courses/dp-100t01.yml
+++ b/learn-certs-pr/courses/dp-100t01.yml
@@ -3,13 +3,12 @@ title: Entwerfen und Implementieren einer Data Science-Lösung in Azure
 metadata:
   title: 'Kurs DP-100T01--A: Entwerfen und Implementieren einer Data Science-Lösung in Azure'
   description: 'Kurs DP-100T01--A: Entwerfen und Implementieren einer Data Science-Lösung in Azure'
-  iltScheduling: true
-  ms.openlocfilehash: 97b5ac4d01745afa203dbba9de2105c75c81c018
-  ms.sourcegitcommit: ac658d0294a354cec251bb1835b62222fea53b6f
-  ms.translationtype: MT
+  ms.openlocfilehash: ef9f1c215eb53785200e0c6aae336e7b3178bb2c
+  ms.sourcegitcommit: 7f4eed93623014c8773df17f68152c44d1e02806
+  ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/19/2022
-  ms.locfileid: "136955299"
+  ms.lasthandoff: 01/31/2022
+  ms.locfileid: "137860760"
 uid: course.dp-100t01
 courseNumber: DP-100T01
 hoursToComplete: 72
@@ -17,20 +16,23 @@ iconUrl: /media/learn/certification/course.svg
 learningPartnersLink: /learn/certifications/partners
 locales:
 - en
-- ja
 - zh-cn
+- de
+- it
+- ja
 - ko
+- es
 levels:
 - intermediate
 roles:
 - data-scientist
 products:
 - azure
-exams:
-- uid: exam.dp-100
 studyGuide:
 - uid: learn.wwl.create-no-code-predictive-models-with-azure-machine-learning
 - uid: learn.data-ai.build-ai-solutions-with-azure-ml-service
+exams:
+- uid: exam.dp-100
 summary: >-
   Lernen Sie, wie man mit Azure Machine Learning Lösungen im Cloudmaßstab bedient. In diesem Kurs lernen Sie, Ihr vorhandenes Wissen über Python und maschinelles Lernen zu nutzen, um die Datenaufnahme und -aufbereitung, die Modellschulung und -bereitstellung sowie die Überwachung von maschinellen Lernlösungen in Microsoft Azure zu verwalten.
 
