--- a/learn-certs-pr/courses/sc-900t00.yml
+++ b/learn-certs-pr/courses/sc-900t00.yml
@@ -1,302 +1,71 @@
 ### YamlMime:Course
-title: Grundlagen zu Sicherheit, Compliance und Identität
+title: 'Grundlagen zu Sicherheit, Compliance und Identität'
 metadata:
   title: 'Kurs SC-900T00--A: Grundlagen zu Sicherheit, Compliance und Identität von Microsoft'
   description: 'Kurs SC-900T00--A: Grundlagen zu Sicherheit, Compliance und Identität von Microsoft'
-  ms.openlocfilehash: 85b87c04a33e80f2645016cf78fefb3d2a6482b6
-  ms.sourcegitcommit: 002839b3d184746f9396fb508f4ea29bdbf66a70
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 01/12/2022
-  ms.locfileid: "135801595"
+  iltScheduling: true
 uid: course.sc-900t00
 courseNumber: SC-900T00
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Beschreiben der grundlegenden Konzepte von Sicherheit, Compliance und Identität
-- skill: Beschreiben der Konzepte und Funktionen von Microsoft Identity & Access Management-Lösungen
-- skill: Beschreiben der Funktionen von Microsoft-Sicherheitslösungen
-- skill: Beschreiben der Complianceverwaltungsfunktionen in Microsoft
+  - skill: 'Beschreiben der grundlegenden Konzepte von Sicherheit, Compliance und Identität'
+  - skill: Beschreiben der Konzepte und Funktionen von Microsoft Identity & Access Management-Lösungen
+  - skill: Beschreiben der Funktionen von Microsoft-Sicherheitslösungen
+  - skill: Beschreiben der Complianceverwaltungsfunktionen in Microsoft
 learningPartnersLink: /learn/certifications/partners
 locales:
-- en
+  - en
+  - ar
+  - zh-cn
+  - zh-tw
+  - fr
+  - de
+  - id
+  - it
+  - ja
+  - ko
+  - pt-br
+  - ru
+  - es
 levels:
-- beginner
+  - beginner
 roles:
-- student
+  - student
 products:
-- azure
+  - azure
 exams:
-- uid: exam.sc-900
-summary: >-
+  - uid: exam.sc-900
+studyGuide:
+  - uid: learn.wwl.describe-security-concepts-methodologies
+  - uid: learn.wwl.describe-identity-principles-concepts
+  - uid: learn.wwl.explore-basic-services-identity-types-of-azure-active-directory-azure-ad
+  - uid: learn.wwl.explore-authentication-capabilities-of-azure-ad
+  - uid: learn.wwl.explore-access-management-capabilities-of-azure-ad
+  - uid: learn.wwl.describe-identity-protection-governance-capabilities-of-azure-ad
+  - uid: learn.wwl.describe-basic-security-capabilities-azure
+  - uid: learn.wwl.describe-security-management-capabilities-of-azure
+  - uid: learn.wwl.describe-security-capabilities-of-azure-sentinel
+  - uid: learn.wwl.describe-threat-protection-with-microsoft-365-defender
+  - uid: learn.wwl.describe-security-management-capabilities-of-microsoft-365
+  - uid: learn.wwl.describe-endpoint-security-with-microsoft-intune
+  - uid: learn.wwl.describe-compliance-management-capabilities-microsoft
+  - uid: learn.wwl.describe-information-protection-governance-capabilities-microsoft-365
+  - uid: learn.wwl.describe-insider-risk-capabilities-microsoft-365
+  - uid: learn.wwl.describe-ediscovery-capabilities-of-microsoft-365
+  - uid: learn.wwl.describe-resource-governance-capabilities-azure
+summary: |-
   Dieser Kurs vermittelt grundlegende Kenntnisse zu Sicherheits-, Compliance- und Identitätskonzepten und zugehörigen cloudbasierten Microsoft-Lösungen.
-
 
   #### <a name="audience-profile"></a>Zielgruppenprofil
 
-
   Die Zielgruppe für diesen Kurs sind Personen, die sich mit den Grundlagen von Sicherheit, Compliance und Identität (SCI) bei cloudbasierten und zugehörigen Microsoft-Diensten vertraut machen möchten. Der Inhalt dieses Kurses richtet sich nach dem Zielsetzungsprofil der Prüfung SC-900. Kandidaten sollten mit Microsoft Azure und Microsoft 365 vertraut sein und verstehen, wie sich die Microsoft-Lösungen für Sicherheit, Compliance und Identität über diese Lösungsbereiche erstrecken können, um eine ganzheitliche End-to-End-Lösung zu bieten.
-prerequisitesSection: >-
+prerequisitesSection: |-
   Vor der Teilnahme an diesem Kurs müssen die Teilnehmer folgende Voraussetzungen erfüllen:
-
 
   *   Allgemeines Verständnis der Konzepte zum Netzwerk und Cloud Computing
 
-
   *   Grundlegende IT-Kenntnisse oder allgemeine Erfahrung in der Arbeit in einer IT-Umgebung
 
-
   *   Grundlegendes Verständnis von Microsoft Azure und Microsoft 365
-outlineSection: >-
-  ### <a name="module-1-describe-basic-concepts-of-security-compliance-and-identity"></a>Modul 1: Beschreiben der grundlegenden Konzepte von Sicherheit, Compliance und Identität
-
-
-  Lernen Sie zentrale Konzepte und Methoden kennen, die für Sicherheit, Compliance und Identitätslösungen grundlegend sind, einschließlich Zero-Trust, geteilte Verantwortung, die Rolle von Identitätsanbietern und mehr.
-
-
-  #### <a name="lessons"></a>Lektionen
-
-
-  *   Beschreiben von Sicherheits- und Compliancekonzepten und -methoden
-
-
-  *   Beschreiben von Identitätskonzepten
-
-
-
-  Nach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:
-
-
-  *   Beschreiben von Sicherheits- und Compliancekonzepten und -methoden
-
-
-  *   Beschreiben von Identitätskonzepten
-
-
-
-  ### <a name="module-2-describe-the-concepts-and-capabilities-of-microsoft-identity-and-access-management-solutions"></a>Modul 2: Beschreiben der Konzepte und Funktionen von Microsoft Identity & Access Management-Lösungen
-
-
-  Hier erfahren Sie mehr über Azure AD-Dienste und zu Identitätsprinzipalen, zur sicheren Authentifizierung, zu Zugriffsverwaltungsfunktionen sowie zu Identitätsschutz und Governance.
-
-
-  #### <a name="lessons"></a>Lektionen
-
-
-  *   Beschreiben der grundlegenden Dienste und Identitätstypen von Azure AD
-
-
-  *   Beschreiben der Authentifizierungsfunktionen von Azure AD
-
-
-  *   Beschreiben der Zugriffsverwaltungsfunktionen von Azure AD
-
-
-  *   Identitätsschutz- und Governancefunktionen von Azure AD
-
-
-
-  #### <a name="lab--explore-azure-active-directory"></a>Lab: Erkunden von Azure Active Directory
-
-
-  ####
-
-
-  #### <a name="lab--explore-azure-ad-authentication-with-self--service-password-rese"></a>Lab: Erkunden der Azure AD-Authentifizierung mit Self-Service-Kennwortzurücksetzung
-
-
-  ####
-
-
-  #### <a name="lab--explore-access-management-in-azure-ad-with-conditional-access"></a>Lab: Erkunden der Zugriffsverwaltung in Azure AD mit bedingtem Zugriff
-
-
-  ####
-
-
-  #### <a name="lab--explore-identity-governance-in-azure-ad-with-privileged-identity-management"></a>Lab: Entdecken von Identity Governance in Azure AD mit Privileged Identity Management
-
-
-  ####
-
-
-  Nach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:
-
-
-  *   Beschreiben der grundlegenden Dienste und Identitätstypen von Azure AD
-
-
-  *   Beschreiben der Authentifizierungsfunktionen von Azure AD
-
-
-  *   Beschreiben der Zugriffsverwaltungsfunktionen von Azure AD
-
-
-  *   Beschreiben der Identity Protection- und Identity Governance-Funktionen von Azure AD
-
-
-
-  ### <a name="module-3-describe-the-capabilities-of-microsoft-security-solutions"></a>Modul 3: Beschreiben der Funktionen von Microsoft-Sicherheitslösungen
-
-
-  Hier erfahren Sie mehr zu Sicherheitsfunktionen in Microsoft. Zu den behandelten Themen gehören Netzwerk- und Plattformfunktionen von Azure, die Azure-Sicherheitsverwaltung sowie Microsoft Azure Sentinel. Sie erfahren mehr über den Bedrohungsschutz mit Microsoft 365 Defender und der Microsoft 365-Sicherheitsverwaltung und erkunden Endpoint Protection mit Intune.
-
-
-  #### <a name="lessons"></a>Lektionen
-
-
-  *   Beschreiben der grundlegenden Sicherheitsfunktionen in Azure
-
-
-  *   Beschreiben der Sicherheitsverwaltungsfunktionen von Azure
-
-
-  *   Beschreiben der Sicherheitsfunktionen von Microsoft Sentinel
-
-
-  *   Beschreiben der Bedrohungsschutzfunktionen von Microsoft 365
-
-
-  *   Beschreiben der Sicherheitsverwaltungsfunktionen von Microsoft 365
-
-
-  *   Endpunktsicherheit mit Microsoft Intune
-
-
-
-  #### <a name="lab--explore-microsoft-defender-for-cloud-apps"></a>Lab: Erkunden von Microsoft Defender für Cloud-Apps
-
-
-  ####
-
-
-  #### <a name="lab--explore-microsoft-sentinel"></a>Lab: Erkunden von Microsoft Sentinel
-
-
-  ####
-
-
-  #### <a name="lab--explore-microsoft-defender-for-cloud"></a>Lab: Erkunden von Microsoft Defender für Cloud
-
-
-  ####
-
-
-  #### <a name="lab--explore-azure-network-security-groups-nsgs"></a>Lab: Erkunden von Azure-Netzwerksicherheitsgruppen (NSGs)
-
-
-  ####
-
-
-  #### <a name="lab--explore-the-microsoft-365-defender-portal"></a>Lab: Erkunden des Microsoft 365 Defender-Portals
-
-
-  ####
-
-
-  #### <a name="lab--explore-microsoft-intune"></a>Lab: Erkunden von Microsoft Intune
-
-
-  ####
-
-
-  Nach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:
-
-
-  *   Beschreiben der grundlegenden Sicherheitsfunktionen in Azure
-
-
-  *   Beschreiben der Sicherheitsverwaltungsfunktionen von Azure
-
-
-  *   Beschreiben der Sicherheitsfunktionen von Microsoft Sentinel
-
-
-  *   Beschreiben der Bedrohungsschutzfunktionen von Microsoft 365
-
-
-  *   Beschreiben der Sicherheitsverwaltungsfunktionen von Microsoft 365
-
-
-  *   Beschreiben der Endpunktsicherheit mit Microsoft Intune
-
-
-
-  ### <a name="module-4-describe-the-capabilities-of-microsoft-compliance-solutions"></a>Modul 4: Beschreiben der Funktionen von Microsoft-Compliancelösungen
-
-
-  Hier erfahren Sie mehr zu Compliancelösungen in Microsoft. Zu den behandelten Themen gehören Compliance Center, Information Protection und Governance in Microsoft 365, das Insider-Risiko und Überwachungslösungen sowie eDiscovery-Lösungen. Außerdem werden Governancefunktionen für Azure-Ressourcen behandelt.
-
-
-  #### <a name="lessons"></a>Lektionen
-
-
-  *   Beschreiben der Complianceverwaltungsfunktionen in Microsoft
-
-
-  *   Beschreiben der Informationsschutz- und Governancefunktionen von Microsoft 365
-
-
-  *   Beschreiben der Insider-Risikofunktionen in Microsoft 365
-
-
-  *   eDiscovery-Funktionen und Überwachungsfunktionen von Microsoft 365
-
-
-  *   Beschreiben der Ressourcengovernancefunktionen in Azure
-
-
-
-  #### <a name="lab--explore-azure-policy"></a>Lab: Erkunden von Azure Policy
-
-
-  ####
-
-
-  #### <a name="lab--explore-the-core-ediscovery-workflow"></a>Lab: Erkunden des Core eDiscovery-Workflows
-
-
-  ####
-
-
-  #### <a name="lab--explore-the-service-trust-portal"></a>Lab: Verwenden von Service Trust Portal
-
-
-  ####
-
-
-  #### <a name="lab--explore-the-microsoft-365-compliance-center-amp-compliance-manager"></a>Lab: Erkunden des Microsoft 365 Compliance Centers und des Compliance-Managers
-
-
-  ####
-
-
-  #### <a name="lab--explore-sensitivity-labels-in-microsoft-365"></a>Lab: Erkunden von Vertraulichkeitsbezeichnungen in Microsoft 365
-
-
-  ####
-
-
-  #### <a name="lab--explore-insider-risk-management-in-microsoft-365"></a>Lab: Erkunden des Insider-Risikomanagements in Microsoft 365
-
-
-  ####
-
-
-  Nach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:
-
-
-  *   Beschreiben der Complianceverwaltungsfunktionen in Microsoft
-
-
-  *   Beschreiben der Informationsschutz- und Governancefunktionen von Microsoft 365
-
-
-  *   Beschreiben der Insider-Risikofunktionen in Microsoft 365
-
-
-  *   Beschreiben der eDiscovery- und Überwachungsfunktionen von Microsoft 365
-
-
-  *   Beschreiben der Ressourcengovernancefunktionen in Azure
+outlineSection: "### <a name=\"module-1-describe-basic-concepts-of-security-compliance-and-identity\"></a>Modul 1: Beschreiben der grundlegenden Konzepte von Sicherheit, Compliance und Identität\n\nLernen Sie zentrale Konzepte und Methoden kennen, die für Sicherheit, Compliance und Identitätslösungen grundlegend sind, einschließlich Zero-Trust, geteilte Verantwortung, die Rolle von Identitätsanbietern und mehr.\n\n#### <a name=\"lessons\"></a>Lektionen\n\n*   Beschreiben von Sicherheits- und Compliancekonzepten und -methoden\n\n*   Beschreiben von Identitätskonzepten\n\n\nNach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:\n\n*   Beschreiben von Sicherheits- und Compliancekonzepten und -methoden\n\n*   Beschreiben von Identitätskonzepten\n\n\n### <a name=\"module-2-describe-the-concepts-and-capabilities-of-microsoft-identity-and-access-management-solutions\"></a>Modul 2: Beschreiben der Konzepte und Funktionen von Microsoft Identity & Access Management-Lösungen\n\nHier erfahren Sie mehr über Azure AD-Dienste und zu Identitätsprinzipalen, zur sicheren Authentifizierung, zu Zugriffsverwaltungsfunktionen sowie zu Identitätsschutz und Governance.\n\n#### <a name=\"lessons\"></a>Lektionen\n\n*   Beschreiben der grundlegenden Dienste und Identitätstypen von Azure\_AD\n\n*   Beschreiben der Authentifizierungsfunktionen von Azure AD\n\n*   Beschreiben der Zugriffsverwaltungsfunktionen von Azure\_AD\n\n*   Identitätsschutz- und Governancefunktionen von Azure AD\n\n\n#### <a name=\"lab--explore-azure-active-directory\"></a>Lab: Erkunden von Azure Active Directory\n\n####\n\n#### <a name=\"lab--explore-azure-ad-authentication-with-self--service-password-rese\"></a>Lab: Erkunden der Azure AD-Authentifizierung mit Self-Service-Kennwortzurücksetzung\n\n####\n\n#### <a name=\"lab--explore-access-management-in-azure-ad-with-conditional-access\"></a>Lab: Erkunden der Zugriffsverwaltung in Azure AD mit bedingtem Zugriff\n\n####\n\n#### <a name=\"lab--explore-identity-governance-in-azure-ad-with-privileged-identity-management\"></a>Lab: Entdecken von Identity Governance in Azure AD mit Privileged Identity Management\n\n####\n\nNach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:\n\n*   Beschreiben der grundlegenden Dienste und Identitätstypen von Azure\_AD\n\n*   Beschreiben der Authentifizierungsfunktionen von Azure AD\n\n*   Beschreiben der Zugriffsverwaltungsfunktionen von Azure\_AD\n\n*   Beschreiben der Identity Protection- und Identity Governance-Funktionen von Azure AD\n\n\n### <a name=\"module-3-describe-the-capabilities-of-microsoft-security-solutions\"></a>Modul 3: Beschreiben der Funktionen von Microsoft-Sicherheitslösungen\n\nHier erfahren Sie mehr zu Sicherheitsfunktionen in Microsoft. Zu den behandelten Themen gehören Netzwerk- und Plattformfunktionen von Azure, die Azure-Sicherheitsverwaltung sowie Microsoft Azure Sentinel. Sie erfahren mehr über den Bedrohungsschutz mit Microsoft 365 Defender und der Microsoft 365-Sicherheitsverwaltung und erkunden Endpoint Protection mit Intune.\n\n#### <a name=\"lessons\"></a>Lektionen\n\n*   Beschreiben der grundlegenden Sicherheitsfunktionen in Azure\n\n*   Beschreiben der Sicherheitsverwaltungsfunktionen von Azure\n\n*   Beschreiben der Sicherheitsfunktionen von Microsoft Sentinel\n\n*   Beschreiben der Bedrohungsschutzfunktionen von Microsoft 365\n\n*   Beschreiben der Sicherheitsverwaltungsfunktionen von Microsoft\_365\n\n*   Endpunktsicherheit mit Microsoft Intune\n\n\n#### <a name=\"lab--explore-microsoft-defender-for-cloud-apps\"></a>Lab: Erkunden von Microsoft Defender für Cloud-Apps\n\n####\n\n#### <a name=\"lab--explore-microsoft-sentinel\"></a>Lab: Erkunden von Microsoft Sentinel\n\n####\n\n#### <a name=\"lab--explore-microsoft-defender-for-cloud\"></a>Lab: Erkunden von Microsoft Defender für Cloud\n\n####\n\n#### <a name=\"lab--explore-azure-network-security-groups-nsgs\"></a>Lab: Erkunden von Azure-Netzwerksicherheitsgruppen (NSGs)\n\n####\n\n#### <a name=\"lab--explore-the-microsoft-365-defender-portal\"></a>Lab: Erkunden des Microsoft 365 Defender-Portals\n\n####\n\n#### <a name=\"lab--explore-microsoft-intune\"></a>Lab: Erkunden von Microsoft Intune\n\n####\n\nNach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:\n\n*   Beschreiben der grundlegenden Sicherheitsfunktionen in Azure\n\n*   Beschreiben der Sicherheitsverwaltungsfunktionen von Azure\n\n*   Beschreiben der Sicherheitsfunktionen von Microsoft Sentinel\n\n*   Beschreiben der Bedrohungsschutzfunktionen von Microsoft 365\n\n*   Beschreiben der Sicherheitsverwaltungsfunktionen von Microsoft\_365\n\n*   Beschreiben der Endpunktsicherheit mit Microsoft Intune\n\n\n### <a name=\"module-4-describe-the-capabilities-of-microsoft-compliance-solutions\"></a>Modul 4: Beschreiben der Funktionen von Microsoft-Compliancelösungen\n\nHier erfahren Sie mehr zu Compliancelösungen in Microsoft. Zu den behandelten Themen gehören Compliance Center, Information Protection und Governance in Microsoft 365, das Insider-Risiko und Überwachungslösungen sowie eDiscovery-Lösungen. Außerdem werden Governancefunktionen für Azure-Ressourcen behandelt.\n\n#### <a name=\"lessons\"></a>Lektionen\n\n*   Beschreiben der Complianceverwaltungsfunktionen in Microsoft\n\n*   Beschreiben der Informationsschutz- und Governancefunktionen von Microsoft\_365\n\n*   Beschreiben der Insider-Risikofunktionen in Microsoft 365\n\n*   eDiscovery-Funktionen und Überwachungsfunktionen von Microsoft\_365\n\n*   Beschreiben der Ressourcengovernancefunktionen in Azure\n\n\n#### <a name=\"lab--explore-azure-policy\"></a>Lab: Erkunden von Azure Policy\n\n####\n\n#### <a name=\"lab--explore-the-core-ediscovery-workflow\"></a>Lab: Erkunden des Core eDiscovery-Workflows\n\n####\n\n#### <a name=\"lab--explore-the-service-trust-portal\"></a>Lab: Verwenden von Service Trust Portal\n\n####\n\n#### <a name=\"lab--explore-the-microsoft-365-compliance-center-amp-compliance-manager\"></a>Lab: Erkunden des Microsoft 365 Compliance Centers und des Compliance-Managers\n\n####\n\n#### <a name=\"lab--explore-sensitivity-labels-in-microsoft-365\"></a>Lab: Erkunden von Vertraulichkeitsbezeichnungen in Microsoft 365\n\n####\n\n#### <a name=\"lab--explore-insider-risk-management-in-microsoft-365\"></a>Lab: Erkunden des Insider-Risikomanagements in Microsoft 365\n\n####\n\nNach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:\n\n*   Beschreiben der Complianceverwaltungsfunktionen in Microsoft\n\n*   Beschreiben der Informationsschutz- und Governancefunktionen von Microsoft\_365\n\n*   Beschreiben der Insider-Risikofunktionen in Microsoft 365\n\n*   Beschreiben der eDiscovery- und Überwachungsfunktionen von Microsoft\_365\n\n*   Beschreiben der Ressourcengovernancefunktionen in Azure"
